<resources>
    <string name="app_name">My_Calculator</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="button_point" translatable="false">.</string>
    <string name="button_result" translatable="false">=</string>
    <string name="button_add" translatable="false">+</string>
    <string name="button_sub" translatable="false">-</string>
    <string name="button_mul" translatable="false">*</string>
    <string name="button_div" translatable="false">/</string>
    <string name="text_view1_hint" translatable="false">" 0"</string>
    <string name="button_settingsText">Settings</string>

    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>
    <string name="button_textReturn">Return</string>
</resources>