<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_textSizeView"
            android:text="@string/my_cool_style"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_textSizeView"
            android:text="@string/material_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLightDarkAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_textSizeView"
            android:text="@string/material_light_action_bar_dark" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_textSizeView"
            android:text="@string/material_dark" />

    </RadioGroup>

    <Button
        android:id="@+id/button_return"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_buttonReturn"
        android:textSize="@dimen/settings_textSizeView"
        android:text="@string/button_textReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons" />


</androidx.constraintlayout.widget.ConstraintLayout>